@@ -7,57 +7,95 @@ package context
 import (
 	"net/http"
 	"sync"
+	"time"
 )
 
-// Original implementation by Brad Fitzpatrick:
-// http://groups.google.com/group/golang-nuts/msg/e2d679d303aa5d53
-
-// DefaultContext is a default context instance.
-var DefaultContext = new(Context)
-
-// Context stores values for requests.
-type Context struct {
-	l sync.Mutex
-	m map[*http.Request]map[interface{}]interface{}
-}
+var (
+	mutex sync.Mutex
+	data  = make(map[*http.Request]map[interface{}]interface{})
+	datat = make(map[*http.Request]int64)
+)
 
 // Set stores a value for a given key in a given request.
-func (c *Context) Set(req *http.Request, key, val interface{}) {
-	c.l.Lock()
-	defer c.l.Unlock()
-	if c.m == nil {
-		c.m = make(map[*http.Request]map[interface{}]interface{})
+func Set(r *http.Request, key, val interface{}) {
+	mutex.Lock()
+	defer mutex.Unlock()
+	if data[r] == nil {
+		data[r] = make(map[interface{}]interface{})
+		datat[r] = time.Now().Unix()
 	}
-	if c.m[req] == nil {
-		c.m[req] = make(map[interface{}]interface{})
-	}
-	c.m[req][key] = val
+	data[r][key] = val
 }
 
-// Get returns a value registered for a given key in a given request.
-func (c *Context) Get(req *http.Request, key interface{}) interface{} {
-	c.l.Lock()
-	defer c.l.Unlock()
-	if c.m != nil && c.m[req] != nil {
-		return c.m[req][key]
+// Get returns a value stored for a given key in a given request.
+func Get(r *http.Request, key interface{}) interface{} {
+	mutex.Lock()
+	defer mutex.Unlock()
+	if data[r] != nil {
+		return data[r][key]
 	}
 	return nil
 }
 
-// Delete removes the value for a given key in a given request.
-func (c *Context) Delete(req *http.Request, key interface{}) {
-	c.l.Lock()
-	defer c.l.Unlock()
-	if c.m != nil && c.m[req] != nil {
-		delete(c.m[req], key)
+// Delete removes a value stored for a given key in a given request.
+func Delete(r *http.Request, key interface{}) {
+	mutex.Lock()
+	defer mutex.Unlock()
+	if data[r] != nil {
+		delete(data[r], key)
 	}
 }
 
-// Clear removes all values for a given request.
-func (c *Context) Clear(req *http.Request) {
-	c.l.Lock()
-	defer c.l.Unlock()
-	if c.m != nil {
-		delete(c.m, req)
+// Clear removes all values stored for a given request.
+//
+// This is usually called by a handler wrapper to clean up request
+// variables at the end of a request lifetime. See ClearHandler().
+func Clear(r *http.Request) {
+	mutex.Lock()
+	defer mutex.Unlock()
+	clear(r)
+}
+
+// clear is Clear without the lock.
+func clear(r *http.Request) {
+	delete(data, r)
+	delete(datat, r)
+}
+
+// Purgue removes request data stored for longer than maxAge, in seconds.
+// It returns the amount of requests removed.
+//
+// If maxAge <= 0, all request data is removed.
+//
+// This is only used for sanity check: in case context cleaning was not
+// properly set some request data can be kept forever, consuming an increasing
+// amount of memory. In case this is detected, Purgue() must be called
+// periodically until the problem is fixed.
+func Purgue(maxAge int) int {
+	mutex.Lock()
+	defer mutex.Unlock()
+	count := 0
+	if maxAge <= 0 {
+		count = len(data)
+		data = make(map[*http.Request]map[interface{}]interface{})
+		datat = make(map[*http.Request]int64)
+	} else {
+		min := time.Now().Unix() - int64(maxAge)
+		for r, _ := range data {
+			if datat[r] < min {
+				clear(r)
+				count++
+			}
+		}
 	}
+	return count
+}
+
+// ClearHandler wraps an http.Handler and clears request values at the end
+// of a request lifetime.
+func ClearHandler(h http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		defer Clear(r)
+		h.ServeHTTP(w, r)
+	})
 }
